discussion/kv_engine/173916/173916_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51805: Pass persistedPrepareSeqno(maxPrepareSeqno) to CkptMgr

We will set the value of the first Checkpoint to this value in a
future change to ensure that the on disk state is correctly updated
if we partially persist a snapshot, restart, and find on streaming
the rest of the snapshot that it does not contain any prepares.

Change-Id: Icc3f1b431c0458005420dfe5c07822128b853c0e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-05-04 09:20:27.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-05-04 09:20:52.000000000
Message: 
Patch Set 2: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/297492/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-04 10:40:20.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/162/ : FAILURE

Failure of GoogleTest "CollectionsEraserTests/CollectionsEraserTest.default_Destroy/persistent_magma_value_only":

<pre>
[ RUN      ] CollectionsEraserTests/CollectionsEraserTest.default_Destroy/persistent_magma_value_only
2022-05-04T02:52:17.562741-07:00 CRITICAL (SynchronousEPEngine:default) MagmaKVStore Magma open failed. Status:IOError: Unable to open file ep_engine_ep_unit_tests.db/test.891301/magma.0/config.json.tmp: The system cannot find the path specified.
unknown file: error: C++ exception with description "MagmaKVStore Magma open failed. Status:IOError: Unable to open file ep_engine_ep_unit_tests.db/test.891301/magma.0/config.json.tmp: The system cannot find the path specified." thrown in SetUp().
unknown file: error: SEH exception with code 0xc0000005 thrown in TearDown().
[  FAILED  ] CollectionsEraserTests/CollectionsEraserTest.default_Destroy/persistent_magma_value_only, where GetParam() = "bucket_type=persistent:backend=magma:item_eviction_policy=value_only" (20 ms)
CollectionsEraserTests/CollectionsEraserTest.default_Destroy/persistent_magma_value_only
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/162/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/130/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/platform/include/hdrhistogram/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/130/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/platform/include/hdrhistogram/hdrhistogram.h:29:10:
error: "hdr_histogram.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/130/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16215/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/128/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/128/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/130/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/130/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/131/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/129/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/122/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/131/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
